@startuml

title __PROFILE's Class Diagram__\n

  package com.avansprojects.antl {
    package com.avansprojects.antl.ui.profile {
      class ProfileViewModel {
          - mUsers : LiveData<List<User>>
          - userName : String
          + ProfileViewModel()
          + getUsers()
          + getUserName()
      }
    }
  }
  

  package com.avansprojects.antl {
    package com.avansprojects.antl.ui.profile {
      class profileFragment {
          - userNameTextView : TextView
          - firstNameTextView : TextView
          - lastNameTextView : TextView
          - emailTextView : TextView
          - phoneNumberTextView : TextView
          - mUserList : List<User>
          {static} + newInstance()
          + onCreateView()
          + onActivityCreated()
      }
    }
  }
  

  ProfileViewModel -up-|> AndroidViewModel
  ProfileViewModel o-- UserRepository : userRepository
  ProfileViewModel o-- User : mainUser
  profileFragment -up-|> Fragment
  profileFragment o-- ProfileViewModel : mViewModel
  SavedState -up-|> Parcelable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
